2008-11-28  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/20-xorb-procs.tcl: XOTcl 1.6.1+ compatibility
	fixes. Starting with this XOTcl version, slots are uniformly
	treated witn non-slot objects when being serialised: they are not
	to be re-initialised ("-noinit") upon creation, as the underlying
	parameter commands are now accessible by introspection and
	streamed explicitly. At some points in xorb, we hooked into
	the re-initialisation to apply some decoration. We, now, fixed
	this to be perfectly forward- and backward compatible.

2008-10-06  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xosc-procs.tcl: Newer xotcl-core versions (0.9*) are
	pickier regarding meta-info provided to ::xo::PackageMgr instances
	(package_key etc.). Thanks to Robert Koblischke and Nima Mazloumi
	for reporting.

2008-08-05  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/20-xorb-procs.tcl: Protecting impl_alias parsing when
	initialising implementation objects from db. It should now be
	fail-safe when denoting calls to XOTcl objects by means of
	white-space separators. The issue shows only when implementations
	were defined through legacy ACS/SC interfaces (as it happens
	in recent versions of xowiki dotlrn portlet). Thanks for Nima
	Mazloumi for pointing to the issue. 

2008-07-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-datatypes-procs.tcl: Another 1.6 compat fix. Need to
	add a -closure flag around a superclass introspection instruction
	to have the anything resolution operative again (in particular
	cases).

2008-07-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-context-procs.tcl (InvocationInformationType): Adding
	isSet helper method ...

	* tcl/xorb-stub-procs.tcl: Adjusting timeout default from 10000ms
	to 0 for both blocking/non-blocking scenarios. This avoids the
	unsolicited use of blocking-timeout feature. Note that you need to
	explicitly set a timeout value > 0 when setting asynchronous to
	'true'.
