@@ -1,5 +1,9 @@
 2008-11-28  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>
 
+	* tcl/xorb-context-procs.tcl (InvocationInformationType): Moved
+	getSubstified logic to the type object. This restores some
+	symmetry between provider and consumer, intially lost.
+
 	* tcl/20-xorb-procs.tcl: XOTcl 1.6.1+ compatibility
 	fixes. Starting with this XOTcl version, slots are uniformly
 	treated witn non-slot objects when being serialised: they are not
